style: Fix timeline list collapse

--- a/style.css
+++ b/style.css
@@ -266,6 +266,5 @@ a {
   .timeline li:nth-child(even) {
     margin-left: auto;
     margin-top: -50px;
-    margin-bottom: -50px;
   }
 }
